--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Rijschool Van de Griendt</title>
-    <meta name="description" content="Free bootstrap template Atlas">
+    <meta name="description" content="Welkom bij rijschool Van de Griendt! de beste in den bosch en omgeving!">
     <link rel="icon" href="img/favicon.png" sizes="32x32" type="image/png">
     <!-- custom.css -->
     <link rel="stylesheet" href="css/custom.css">
