--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
             </header>
             <h1 data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="display-3 text-white font-weight-bold my-5" style="margin-top: 20px;">
                 Rijschool<br>
-                Van de Griendt
+                van de Griendt
             </h1>
             <p data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="lead text-white my-4" >
-                Welkom bij rijschool Van de Griendt
+                Welkom bij rijschool van de Griendt
                 <br> waar je op een toegankelijke en persoonlijke manier leert autorijden! Mijn naam is Max van de Griendt, een gedreven rijinstructeur met een passie voor autorijden en het aanleren van veilige rijvaardigheden. Met een frisse kijk op het geven van rijlessen zorg ik ervoor dat zowel plezier als efficiëntie centraal staan, zodat jij met vertrouwen en succes je rijbewijs behaalt!
             </p>
             <a href="#contact" data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="btn my-4 font-weight-bold atlas-cta cta-blue">Contact</a>
