--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-TW">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
     <title>Rijschool Van de Griendt</title>
     <meta name="description" content="Free bootstrap template Atlas">
     <link rel="icon" href="img/LogoNew.png" sizes="32x32" type="image/png">
@@ -40,10 +40,10 @@
             </header>
             <h1 data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="display-3 text-white font-weight-bold my-5" style="margin-top: 20px;">
                 Rijschool<br>
-                van de Griendt
+                Van de Griendt
             </h1>
             <p data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="lead text-white my-4" >
-                Welkom bij rijschool van de Griendt
+                Welkom bij rijschool Van de Griendt
                 <br> waar je op een toegankelijke en persoonlijke manier leert autorijden! Mijn naam is Max van de Griendt, een gedreven rijinstructeur met een passie voor autorijden en het aanleren van veilige rijvaardigheden. Met een frisse kijk op het geven van rijlessen zorg ik ervoor dat zowel plezier als efficiëntie centraal staan, zodat jij met vertrouwen en succes je rijbewijs behaalt!
             </p>
             <a href="#contact" data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="btn my-4 font-weight-bold atlas-cta cta-blue">Contact</a>
@@ -111,7 +111,7 @@
     </div>
 
 <!-- Proefles aanvraag formulier -->
-<div class="container my-5 py-4" id="proefles-aanvraag" style="background-color: #192440; border-radius: 8px; box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);">
+<div class="container my-5 py-4" id="proefles-aanvraag" style="background-color: #0090e3; border-radius: 8px; box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);">
     <div class="row justify-content-center text-white text-center">
         <div class="col-md-10">
             <h3 class="font-weight-bold mb-4">Vraag nu je Proefles aan!</h3>
