--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
             </header>
             <h1 data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="display-3 text-white font-weight-bold my-5" style="margin-top: 20px;">
                 Rijschool<br>
-                Van de Griendt
+                van de Griendt
             </h1>
             <p data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="lead text-white my-4" >
                 Welkom bij rijschool Van de Griendt
-                <br> waar je op een toegankelijke en persoonlijke manier leert autorijden! Mijn naam is Max van de Griendt, een gedreven rijinstructeur met een passie voor autorijden en het aanleren van veilige rijvaardigheden. Met een frisse kijk op het geven van rijlessen zorg ik ervoor dat zowel plezier als efficiëntie centraal staan, zodat jij met vertrouwen en succes je rijbewijs behaalt!
+                <br> waar je op een toegankelijke en persoonlijke manier leert autorijden! Mijn naam is Max van de Griendt, een gedreven rijinstructeur met een passie voor autorijden en het aanleren van veilige rijvaardigheden. Zodat jij met vertrouwen en succes je rijbewijs behaalt!
             </p>
             <a href="#contact" data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="btn my-4 font-weight-bold atlas-cta cta-blue">Contact</a>
         </div>
@@ -96,10 +96,10 @@
         <div class="container">
             <div class="row justify-content-between text-center text-md-left">
                 <div data-aos="fade-left" data-aos-duration="1000" data-aos-once="true" class="col-md-6 flex-md-last">
-                    <h2 class="font-weight-bold"style="color: white;">Waarom ons?</h2>
+                    <h2 class="font-weight-bold"style="color: white;">De weg naar jou rijbewijs</h2>
                     <p class="my-4" style="color: white;" >
                         Bij mij begint elke leerling met een proefles. Dit is fijn om je startniveau te beoordelen en je te laten kennismaken met zowel de instructeur als de lesauto. Tijdens de proefles kijken we of je een snelle leerling bent of net wat meer tijd nodig hebt. Op basis van deze evaluatie krijg je advies over welk lespakket het meest geschikt is voor jou. Het opstellen van een helder lesplan is cruciaal om succesvol je rijbewijs te behalen.
-                        <br><br> Mijn rijlessen zijn precies wat je zoekt! Je hebt de keuze tussen 60 of 90 minuten per les, ideaal om stap voor stap alle rijvaardigheden te leren die je nodig hebt om een veilige en zelfverzekerde bestuurder te worden. Voordat je het weet, ben je klaar om zelfstandig achter het stuur te zitten!
+                        <br><br>Je hebt de keuze tussen 60 of 90 minuten per les, ideaal om stap voor stap alle rijvaardigheden te leren die je nodig hebt om een veilige en zelfverzekerde bestuurder te worden. Voordat je het weet, ben je klaar om zelfstandig achter het stuur te zitten!
                     </p>
                     <a href="#contact" class="btn my-4 font-weight-bold atlas-cta cta-blue">contact</a>
                 </div>
@@ -114,7 +114,7 @@
 <div class="container my-5 py-4" id="proefles-aanvraag" style="background-color: #0090e3; border-radius: 8px; box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);">
     <div class="row justify-content-center text-white text-center">
         <div class="col-md-10">
-            <h3 class="font-weight-bold mb-4">Vraag nu je Proefles aan!</h3>
+            <h3 class="font-weight-bold mb-4">Vraag nu je proefles aan!</h3>
             <form id="proefles-form" class="text-left">
                 <div class="form-row">
                     <!-- Links: Naam, Email, Telefoonnummer -->
@@ -216,6 +216,9 @@
     }
 </style>
 
+<a href="https://wa.me/31612345678" class="whatsapp-float" target="_blank">
+    <i class="fa fa-whatsapp whatsapp-icon"></i>
+</a>
 
 
 
@@ -273,7 +276,7 @@
             <div class="col-md-6 text-white">
                 <h2 class="font-weight-bold">Contact</h2>
                 <p class="my-4">
-                    Neem contact met ons op voor meer informatie of om een proefles te plannen.
+                    Neem contact met ons op voor meer informatie.
                 </p>
                 <ul class="list-unstyled">
                     <li>Email: <a href="mailto:info@rijschoolvandegriendt.nl" class="text-white">info@rijschoolvandegriendt.nl</a></li>
