--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="row justify-content-between text-center text-md-left" style="margin-bottom: 100px;">
                 <div data-aos="fade-right" data-aos-duration="1000" data-aos-once="true" class="col-md-6">
                     <h2 class="font-weight-bold" >Waarom kiezen voor Rijschool van de Griendt?</h2>
-                    <p class="my-4">Bij mij helpen we je stap voor stap op weg naar het behalen van je rijbewijs. Vanaf de eerste intake zorgen we ervoor dat je precies weet waar je aan toe bent. Ik bied op maat gemaakte rijlessen, volledig afgestemd op jouw behoeften. Samen doen we er alles aan om jou te laten uitgroeien tot een zelfverzekerde en veilige bestuurder.
+                    <p class="my-4">Bij mij help ik je stap voor stap op weg naar het behalen van je rijbewijs. Vanaf de eerste intake zorgen we ervoor dat je precies weet waar je aan toe bent. Ik bied op maat gemaakte rijlessen, volledig afgestemd op jouw behoeften. Samen doen we er alles aan om jou te laten uitgroeien tot een zelfverzekerde en veilige bestuurder.
                         <br><br>Wil je graag in de avond of in het weekend lessen? Ook dat is bij Rijschool van de Griendt geen enkel probleem!</p>
                     <a href="#contact" class="btn my-4 font-weight-bold atlas-cta cta-blue">contact</a>
                 </div>
