--- a/index.html
+++ b/index.html
@@ -53,34 +53,13 @@
 
 
     <!-- three-blcok -->
-    <div class="container my-5 py-2">
-        <h2 class="text-center font-weight-bold my-5">Beste keuzen voor een rijschool</h2>
-        <div class="row">
-            <div data-aos="fade-up" data-aos-delay="0" data-aos-duration="1000" data-aos-once="true" class="col-md-4 text-center">
-                <img src="img/290138_document_extension_file_format_paper_icon.png" alt="Rijbewijs B" class="mx-auto img-fixed-size">
-                <h4>Rijbewijs B</h4>
-                <p></p>
-            </div>
-            <div data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000" data-aos-once="true" class="col-md-4 text-center">
-                <img src="img/9055182_bxs_city_icon.png" alt="Dan bosch" class="mx-auto img-fixed-size">
-                <h4>S' Hertogenbosch</h4>
-                <p></p>
-            </div>
-            <div data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000" data-aos-once="true" class="col-md-4 text-center">
-                <img src="img/3289573_guy_individual_man_people_peron_icon.png" alt="Vaste rij instructeur" class="mx-auto img-fixed-size">
-                <h4>Vaste rij instructeur</h4>
-                <p></p>
-            </div>
-        </div>
-    </div>
-    
     <!-- feature (skew background) -->
     <div class="jumbotron jumbotron-fluid feature" id="feature-first">
         <div class="container my-5">
             <div class="row justify-content-between text-center text-md-left" style="margin-bottom: 100px;">
                 <div data-aos="fade-right" data-aos-duration="1000" data-aos-once="true" class="col-md-6">
                     <h2 class="font-weight-bold" >Waarom kiezen voor Rijschool van de Griendt?</h2>
-                    <p class="my-4">Bij mij help ik je stap voor stap op weg naar het behalen van je rijbewijs. Vanaf de eerste intake zorgen we ervoor dat je precies weet waar je aan toe bent. Ik bied op maat gemaakte rijlessen, volledig afgestemd op jouw behoeften. Samen doen we er alles aan om jou te laten uitgroeien tot een zelfverzekerde en veilige bestuurder.
+                    <p class="my-4">Bij mij helpen we je stap voor stap op weg naar het behalen van je rijbewijs. Vanaf de eerste intake zorgen we ervoor dat je precies weet waar je aan toe bent. Ik bied op maat gemaakte rijlessen, volledig afgestemd op jouw behoeften. Samen doen we er alles aan om jou te laten uitgroeien tot een zelfverzekerde en veilige bestuurder.
                         <br><br>Wil je graag in de avond of in het weekend lessen? Ook dat is bij Rijschool van de Griendt geen enkel probleem!</p>
                     <a href="#contact" class="btn my-4 font-weight-bold atlas-cta cta-blue">contact</a>
                 </div>
@@ -91,12 +70,37 @@
             </div>
         </div>
     </div>
+
+            <div class="jumbotron " id="feature-last">
+        <div class="container">
+                <div class="row">
+                    <div data-aos="fade-up" data-aos-delay="0" data-aos-duration="1000" data-aos-once="true" class="col-md-4 text-center">
+                        <img src="img/290138_document_extension_file_format_paper_icon.png" alt="Rijbewijs B" class="mx-auto img-fixed-size" >
+                        <h4 style="color: white;">Rijbewijs B</h4>
+                        <p></p>
+                    </div>
+                    <div data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000" data-aos-once="true" class="col-md-4 text-center">
+                        <img src="img/9055182_bxs_city_icon.png" alt="Dan bosch" class="mx-auto img-fixed-size">
+                        <h4 style="color: white;">S' Hertogenbosch en omstreken </h4 >
+                        <p></p>
+                    </div>
+                    <div data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000" data-aos-once="true" class="col-md-4 text-center">
+                        <img src="img/3289573_guy_individual_man_people_peron_icon.png" alt="Vaste rij instructeur" class="mx-auto img-fixed-size">
+                        <h4 style="color: white;" >Vaste rij instructeur</h4>
+                        <p></p>
+                    </div>
+            </div>
+        </div>
+    </div>
+
+
+
     <!-- feature (green background) -->
     <div class="jumbotron jumbotron-fluid feature" id="feature-last">
         <div class="container">
             <div class="row justify-content-between text-center text-md-left">
                 <div data-aos="fade-left" data-aos-duration="1000" data-aos-once="true" class="col-md-6 flex-md-last">
-                    <h2 class="font-weight-bold"style="color: white;">De weg naar jouw rijbewijs</h2>
+                    <h2 class="font-weight-bold"style="color: white;">De weg naar jou rijbewijs</h2>
                     <p class="my-4" style="color: white;" >
                         Bij mij begint elke leerling met een proefles. Dit is fijn om je startniveau te beoordelen en je te laten kennismaken met zowel de instructeur als de lesauto. Tijdens de proefles kijken we of je een snelle leerling bent of net wat meer tijd nodig hebt. Op basis van deze evaluatie krijg je advies over welk lespakket het meest geschikt is voor jou. Het opstellen van een helder lesplan is cruciaal om succesvol je rijbewijs te behalen.
                         <br><br>Je hebt de keuze tussen 60 of 90 minuten per les, ideaal om stap voor stap alle rijvaardigheden te leren die je nodig hebt om een veilige en zelfverzekerde bestuurder te worden. Voordat je het weet, ben je klaar om zelfstandig achter het stuur te zitten!
