--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
-    <title>Rijschool Van de Griendt</title>
+    <title>Rijschool van de Griendt</title>
     <meta name="description" content="Free bootstrap template Atlas">
     <link rel="icon" href="img/LogoNew.png" sizes="32x32" type="image/png">
     <!-- custom.css -->
@@ -43,7 +43,7 @@
                 van de Griendt
             </h1>
             <p data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="lead text-white my-4" >
-                Welkom bij rijschool Van de Griendt
+                Welkom bij rijschool van de Griendt
                 <br> waar je op een toegankelijke en persoonlijke manier leert autorijden! Mijn naam is Max van de Griendt, een gedreven rijinstructeur met een passie voor autorijden en het aanleren van veilige rijvaardigheden. Zodat jij met vertrouwen en succes je rijbewijs behaalt!
             </p>
             <a href="#contact" data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="btn my-4 font-weight-bold atlas-cta cta-blue">Contact</a>
@@ -230,7 +230,7 @@
     
 <!-- price table -->
 <div class="container my-5 py-2" id="price-table">
-    <h2 class="text-center font-weight-bold d-block mb-3">Onze Lespakketten</h2>
+    <h2 class="text-center font-weight-bold d-block mb-3">Lespakketten</h2>
     <div class="row">
         <div data-aos="fade-right" data-aos-delay="200" data-aos-duration="1000" data-aos-once="true" class="col-md-4 text-center py-4 mt-5">
             <h4 class="my-4">Pakket A</h4>
@@ -280,7 +280,7 @@
             <div class="col-md-6 text-white">
                 <h2 class="font-weight-bold">Contact</h2>
                 <p class="my-4">
-                    Neem contact met ons op voor meer informatie.
+                    Neem contact met mij op voor meer informatie.
                 </p>
                 <ul class="list-unstyled">
                     <li>Email: <a href="mailto:info@rijschoolvandegriendt.nl" class="text-white">info@rijschoolvandegriendt.nl</a></li>
