--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <div class="container">
             <div class="row justify-content-between text-center text-md-left">
                 <div data-aos="fade-left" data-aos-duration="1000" data-aos-once="true" class="col-md-6 flex-md-last">
-                    <h2 class="font-weight-bold"style="color: white;">De weg naar jou rijbewijs</h2>
+                    <h2 class="font-weight-bold"style="color: white;">De weg naar jouw rijbewijs</h2>
                     <p class="my-4" style="color: white;" >
                         Bij mij begint elke leerling met een proefles. Dit is fijn om je startniveau te beoordelen en je te laten kennismaken met zowel de instructeur als de lesauto. Tijdens de proefles kijken we of je een snelle leerling bent of net wat meer tijd nodig hebt. Op basis van deze evaluatie krijg je advies over welk lespakket het meest geschikt is voor jou. Het opstellen van een helder lesplan is cruciaal om succesvol je rijbewijs te behalen.
                         <br><br>Je hebt de keuze tussen 60 of 90 minuten per les, ideaal om stap voor stap alle rijvaardigheden te leren die je nodig hebt om een veilige en zelfverzekerde bestuurder te worden. Voordat je het weet, ben je klaar om zelfstandig achter het stuur te zitten!
