--- a/index.html
+++ b/index.html
@@ -232,6 +232,11 @@
 <!-- price table -->
 <div class="container my-5 py-2" id="price-table">
     <h2 class="text-center font-weight-bold d-block mb-3">Lespakketten</h2>
+    <p class="text-center font-weight-bold mb-4">
+        Losse rijles 60min €55 <br>
+        Losse rijles 90min €82,50 <br>
+        Proefles 60min €30 (gratis bij aanschaf van pakket)
+    </p>
     <div class="row">
         <div data-aos="fade-right" data-aos-delay="200" data-aos-duration="1000" data-aos-once="true" class="col-md-4 text-center py-4 mt-5">
             <h4 class="my-4">Pakket A</h4>
