--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
     <title>Rijschool van de Griendt</title>
-    <meta name="description" content="Free bootstrap template Atlas">
+    <meta name="description" content="De beste rijschool in S' Hertogenbosch en omstreken!">
     <link rel="icon" href="img/LogoNew.png" sizes="32x32" type="image/png">
     <!-- custom.css -->
     <link rel="stylesheet" href="css/custom.css">
