--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 </div>
                 <div data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000" data-aos-once="true" class="col-md-4 text-center feature-item">
                     <img src="img/9055182_bxs_city_icon.png" alt="Den Bosch">
-                    <h4>S' Hertogenbosch en omstreken</h4>
+                    <h4>‘s-Hertogenbosch en omstreken</h4>
                 </div>
                 <div data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000" data-aos-once="true" class="col-md-4 text-center feature-item">
                     <img src="img/3289573_guy_individual_man_people_peron_icon.png" alt="Vaste rij instructeur">
@@ -323,7 +323,7 @@
     <div class="container">
         <div class="row justify-content-between">
             <div class="col-md-6 text-white align-self-center text-center text-md-left my-2">
-                Copyright © 2024 rijschool van de Griendt. Powered by 
+                Copyright © 2024 Rijschool van de Griendt. Powered by 
                 <a href="https://spectux.com" target="_blank" class="text-white font-weight-bold">SpectUX</a>.
             </div>
             
