--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
+    <meta name="keywords" content="Rijschool Den Bosch, Autorijlessen Den Bosch, Rijbewijs halen Den Bosch, Goedkope rijschool Den Bosch, Automaat rijlessen Den Bosch, Theoriecursus Den Bosch, Praktijkexamen Den Bosch, Motorrijlessen Den Bosch">
     <title>Rijschool van de Griendt</title>
     <meta name="description" content="De beste rijschool in S' Hertogenbosch en omstreken!!">
     <link rel="icon" href="img/LogoNew.png" sizes="32x32" type="image/png">
